# Cloud-Email-Analyzer

./: .gitignore  Dockerfile.integration  Dockerfile.test  Makefile  README.md  deploy_aws.sh  deploy_frontend.sh  deploy_lambda.sh  docker-compose.ci.yaml  docker-compose.localstack.yaml  docker-compose.unit.yaml  pyproject.toml  pytest.ini
.codex/environments/: environment.toml
.github/workflows/: ci.yml
docker/: Dockerfile.integration  Dockerfile.unit  docker-compose.ci.yaml  docker-compose.localstack.yaml  docker-compose.unit.yaml
fixtures/: benign.eml  demo_population.json  eicar.eml  multiple_attachments.eml  phishing.eml
infra/: clam-av.yaml
infra/env/dev/: backend.tf  (+1 more)
infra/state_machines/: email_pipeline.asl.json
infra/terraform/: apigateway.tf  cloudfront.tf  dynamodb.tf  ecr.tf  email_pipeline.asl.json  iam.tf  lambda_shared.tf  locals.tf  main.tf  outputs.tf  providers.tf  s3.tf  ses.tf  stepfunctions.tf  variables.tf
libs/common/: pyproject.toml
scripts/: build_all_zips.sh  build_zip.sh  codex_local_demo.sh  create_demo_users.py  deploy_local.sh  ensure_local_pipeline.py  ensure_local_tables.py  init_localstack.sh  local_build_push.sh  local_deploy.sh  local_seed_email.py  populate_demo.py  push_sample_email.sh  push_sample_email_auto.sh  run_tests.sh  seed.py  tail_lambda.sh
services/aggregate_verdicts/: Dockerfile  pyproject.toml
services/clamav_database/: Dockerfile  freshclam.conf  lambda.py
services/clamav_virus_scan/: Dockerfile  clamd.conf  lambda.py
services/email_ingest/: pyproject.toml
services/extract_attachments/: Dockerfile  pyproject.toml
services/extract_attachments/src/extract_attachments/: main.py
services/phishing_ml_predict/: Dockerfile  handler.py  pyproject.toml  requirements.txt
services/phishing_ml_predict/model_artifacts/: core4_phishing_model.joblib  core4_tfidf_vectorizer.joblib
services/phishing_ml_predict/phishing_ml_training/: training.py
services/web_server/: Dockerfile  app.db  pyproject.toml  requirements.txt
services/web_server/app/: database.py  main.py  models.py  schemas.py  seed.py
services/web_server/app/routers/: emails.py  metrics.py
services/web_server/src/app/: audit.py  auth.py  database.py  dynamodb.py  main.py  models.py  schemas.py
services/web_server/src/app/routers/: auth.py  emails.py  messages.py  metrics.py
tests/: conftest.py
(+69 files in other folders)
