[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-ml-predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "botocore",
  "joblib",
  "numpy",
  "scikit-learn",
  "services-common",
]

[tool.setuptools]
py-modules = ["handler"]
