[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-ml-predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3",
  "botocore",
  "joblib==1.5.2",
  "numpy==2.0.2",
  "scipy==1.14.1",
  "scikit-learn==1.7.2",
  "services-common",
]

[tool.setuptools]
py-modules = ["handler"]
